# MultiEditPDf

./: CMakeLists.txt  README.md
src/: CreateConfig.cpp  CreateConfig.h  EditFromConfig.cpp  EditFromConfig.h  main.cpp
